# particle-simulation-3d

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.ps1  build.sh  index.html  netlify.toml  particle-simulation.js  particle-simulation_bg.wasm  rust-toolchain.toml  sw.js
.cargo/: .config.toml  config.toml
.github/workflows/: pages.yml
assets/: manifest.json  sw.js
eframe_template/: Cargo.toml  index.html
eframe_template/assets/: sw.js
eframe_template/src/: app.rs  lib.rs  main.rs
release/: Cargo.toml  README.md
release/src/: main.rs
src/: app.rs  camera.rs  custom_renderer.rs  input_manager.rs  lib.rs  main.rs  particle_system.rs  renderer.rs
src/particle_system/: compute_particles.rs  fragment_particles.rs  mod.rs
src/shaders/: compute.wgsl  fragment_update.wgsl  particle.wgsl  transform_feedback.wgsl
src/simulation/: compute.rs  cpu.rs  mod.rs  transform_feedback.rs
