[package]
name = "particle-simulation"
version = "0.1.0"
authors = ["Lucas de Linhares <lucasdelinhares@gmail.com>"]
edition = "2024"

[dependencies]
egui = { version = "0.31", default-features = false, features = ["rayon"] }
eframe = { version = "0.31", default-features = false, features = [
    "wgpu",
    "wayland",
    "x11",
] }
wgpu = "24"
egui-wgpu = { version = "0.31", default-features = false }
log = { version = "0.4", optional = true }
glam = { version = "0.30", features = ["fast-math"] }
bytemuck = "1.22"
rand = { version = "0.9", default-features = false, features = ["small_rng"] }
rayon = "1.10"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.11", optional = true }
mimalloc = { version = "0.1" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "24", features = ["webgl"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"] }
web-time = "1.1"                                                    # TODO: See if I can get rid of this
web-sys = "0.3"                                                     # to access the DOM (to hide the loading text)

[features]
default = []
logs = ["dep:env_logger", "dep:log"]

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
